// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypeScript code generation #generateSource() should correctly handle inline fragments on interfaces 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroQueryQueryVariables {
  episode: Episode | null;
}

export interface HeroQueryQuery {
  hero: {
    // The name of the character
    name: string,
    // The friends of the character exposed as a connection with edges
    friendsConnection: {
      // A list of the friends, as a convenience when edges are not needed.
      friends: Array<CharacterFragmentFragment>,
    },
  } | null;
}

export interface CharacterFragmentOnHuman {
  // What this human calls themselves
  name: string;
  // The home planet of the human, or null if unknown
  homePlanet: string | null;
}

export interface CharacterFragmentOnDroid {
  // What others call this droid
  name: string;
  // This droid's primary function
  primaryFunction: string | null;
}

export type CharacterFragmentFragment =
  | CharacterFragmentOnHuman
  | CharacterFragmentOnDroid
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should correctly handle nested inline fragments on interfaces 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroQueryQueryVariables {
  episode: Episode | null;
}

export interface HeroQueryQuery {
  hero: {
    // The name of the character
    name: string,
    // The friends of the character exposed as a connection with edges
    friendsConnection: {
      // A list of the friends, as a convenience when edges are not needed.
      friends: Array<CharacterFragmentFragment>,
    },
  } | null;
}

export interface CharacterFragmentOnHuman {
  // What this human calls themselves
  name: string;
  // The home planet of the human, or null if unknown
  homePlanet: string | null;
  // This human's friends, or an empty list if they have none
  friends: Array<OtherCharacterFragmentFragment>;
}

export interface CharacterFragmentOnDroid {
  // What others call this droid
  name: string;
  // This droid's primary function
  primaryFunction: string | null;
}

export type CharacterFragmentFragment =
  | CharacterFragmentOnHuman
  | CharacterFragmentOnDroid

export interface OtherCharacterFragmentOnHuman {
  // Height in the preferred unit, default is meters
  height: number | null;
}

export interface OtherCharacterFragmentOnDroid {
  // The movies this droid appears in
  appearsIn: Array< Episode | null >;
}

export type OtherCharacterFragmentFragment =
  | OtherCharacterFragmentOnHuman
  | OtherCharacterFragmentOnDroid
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate correct list with custom fragment 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroAndFriendsNamesQueryVariables {
  episode: Episode | null;
}

export interface HeroAndFriendsNamesQuery {
  hero: {
    // The name of the character
    name: string,
    // The friends of the character, or an empty list if they have none
    friends: Array<FriendFragment>,
  } | null;
}

export interface FriendFragment {
  // The name of the character
  name: string;
}
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate fragmented query operations 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

export interface HeroAndFriendsNamesQuery {
  hero: HeroFriendsFragment & {
    // The name of the character
    name: string,
  } | null;
}

export interface HeroFriendsFragment {
  // The friends of the character, or an empty list if they have none
  friends: Array< {
    // The name of the character
    name: string,
  } > | null;
}
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate mutation operations with complex input types 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface ReviewInput {
  // 0-5 stars
  stars: number;
  // Comment about the movie, optional
  commentary: string | null;
  // Favorite color, optional
  favorite_color: ColorInput | null;
}

export interface ColorInput {
  red: number;
  green: number;
  blue: number;
}

export interface ReviewMovieMutationVariables {
  episode: Episode | null;
  review: ReviewInput | null;
}

export interface ReviewMovieMutation {
  createReview: {
    // The number of stars this review gave, 1-5
    stars: number,
    // Comment about the movie
    commentary: string | null,
  } | null;
}
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate query operations with inline fragments 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

export interface HeroAndDetailsQuery {
  hero: HeroDetailsFragment & {
    // The name of the character
    name: string,
  } | null;
}

export interface HeroDetailsOnDroid {
  // This droid's primary function
  primaryFunction: string | null;
}

export interface HeroDetailsOnHuman {
  // Height in the preferred unit, default is meters
  height: number | null;
}

export type HeroDetailsFragment =
  | HeroDetailsOnDroid
  | HeroDetailsOnHuman
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate simple nested query operations including input variables 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroAndFriendsNamesQueryVariables {
  episode: Episode | null;
}

export interface HeroAndFriendsNamesQuery {
  hero: {
    // The name of the character
    name: string,
    // The friends of the character, or an empty list if they have none
    friends: Array< {
      // The name of the character
      name: string,
    } > | null,
  } | null;
}
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate simple query operations 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

export interface HeroNameQuery {
  hero: {
    // The name of the character
    name: string,
  } | null;
}
/* tslint:enable */
"
`;

exports[`TypeScript code generation #generateSource() should generate simple query operations including input variables 1`] = `
"//  This file was automatically generated and should not be edited.
/* tslint:disable */

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export interface HeroNameQueryVariables {
  episode: Episode | null;
}

export interface HeroNameQuery {
  hero: {
    // The name of the character
    name: string,
  } | null;
}
/* tslint:enable */
"
`;
